--- a/setup.cfg
+++ b/setup.cfg
@@ -8,5 +8,5 @@ universal = 0
 test = pytest
 
 [tool:pytest]
-addopts = --durations=0 -ra -q
+addopts = --durations=0 --cov=./dzo -ra -q
 python_files = test_*.py
