--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,9 @@ jobs:
       - run:
           command: |
             echo deployment
+            pip3 install wheel twine
+            python setup.py sdist bdist_wheel
+            twine upload --repository-url $PYPI_REPOSITORY_URL -u $PYPI_USERNAME -p $PYPI_PASSWORD dist/*
 
 workflows:
   version: 2
@@ -86,4 +89,5 @@ workflows:
             - test_job
           filters:
             branches:
-              only: master
+              only:
+                - master
