--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
       - run:
           command: |
             echo deployment
-            pip3 install wheel twine
+            pip3 install --user wheel twine
             python setup.py sdist bdist_wheel
             twine upload --repository-url $PYPI_REPOSITORY_URL -u $PYPI_USERNAME -p $PYPI_PASSWORD dist/*
 
